5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1728_2504.log
== TEST (2019-05-23 00:30:35) 
-- CODE:
a = float(input("virus: "))
b = float(input("leucocitos: "))
pb = float(input("p. de virus"))
pa = float(input("p. de leucocitos: "))

virus = 0
leucocitos = 0

i = 0

while(a != (2*b))
-- ERROR:
File "XXXX", line 11
    while(a != (2*b))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:01:05) 
-- CODE:
a = float(input("virus: "))
b = float(input("leucocitos: "))
pb = float(input("p. de virus"))
pa = float(input("p. de leucocitos: "))
ab = 2 * b
virus = 0
leucocitos = 0

i = 0

while(a != ab)
-- ERROR:
File "XXXX", line 11
    while(a != ab)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
